--- a/sass/symbols/_benefit.scss
+++ b/sass/symbols/_benefit.scss
@@ -1,1 +1,12 @@
-// Icon card
+// Benefit
+.benefit {
+    margin: $gutter-width * 2;
+
+    img {
+        margin-bottom: $gutter-width * 3;
+    }
+
+    p {
+        margin-top: $gutter-width;
+    }
+}
