--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -4,6 +4,6 @@
     background-repeat: no-repeat;
     background-size: cover;
     min-height: 100vh;
-    padding-top: 42px;
-    padding-bottom: 42px;
+    padding-top: $gutter-width * 10;
+    padding-bottom: $gutter-width * 10;
 }
