--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,13 +14,14 @@
 @import './symbols/_btn.scss';
 @import './symbols/_form-field.scss';
 @import './symbols/_link.scss';
+@import './symbols/_overlay.scss';
 @import './symbols/_thumbnail.scss';
 
 // Utilities
 @import './utilities/_colors.scss';
 @import './utilities/_flex.scss';
 @import './utilities/_image.scss';
-@import './utilities/_overlays.scss';
+@import './utilities/_shadow.scss';
 @import './utilities/_spacings.scss';
 @import './utilities/_text.scss';
 @import './utilities/_width.scss';
