--- a/sass/symbols/_btn.scss
+++ b/sass/symbols/_btn.scss
@@ -8,6 +8,11 @@
     border-radius: 4px;
     cursor: pointer;
     text-align: center;
+    transition: background-color 240ms ease;
+
+    &:hover {
+        background-color: $secondary-color;
+    }
 }
 
 .btn--large {
