--- a/sass/utilities/_flex.scss
+++ b/sass/utilities/_flex.scss
@@ -16,6 +16,10 @@
     align-items: center;
 }
 
+.align-end {
+    align-items: flex-end;
+}
+
 .direction-row-reversed {
     flex-direction: row-reverse;
 }
