--- a/sass/utilities/_spacings.scss
+++ b/sass/utilities/_spacings.scss
@@ -3,12 +3,26 @@
     margin: 0 auto;
 }
 
-.ma0 {
-    margin: 0;
+.mequalizer-5 {
+    margin-left: -$gutter-width / 2;
+    margin-right: -$gutter-width / 2;
 }
 
-.pa0 {
-    padding: 0;
+.mequalizer-30 {
+    @media screen and (min-width: $sm-breakpoint) {
+        margin-left: -$gutter-width;
+        margin-right: -$gutter-width;
+    }
+
+    @media screen and (min-width: $md-breakpoint) {
+        margin-left: -$gutter-width * 3;
+        margin-right: -$gutter-width * 3;
+    }
+}
+
+//margins
+.ma0 {
+    margin: 0;
 }
 
 .mt1 {
@@ -25,4 +39,31 @@
 
 .mt4 {
     margin-top: $gutter-width*4;
+}
+
+.mr1 {
+    margin-right: $gutter-width;
+}
+
+.ml1 {
+    margin-left: $gutter-width;
+}
+
+//padding
+.pa0 {
+    padding: 0;
+}
+
+.p4 {
+    @media screen and (min-width: $sm-breakpoint) {
+        padding: $gutter-width * 4;
+    }
+}
+
+.p6 {
+    padding: $gutter-width * 4 $gutter-width * 2;
+
+    @media screen and (min-width: $sm-breakpoint) {
+        padding: $gutter-width * 6;
+    }
 }
